// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Input /> renders correctly 1`] = `
<StyledComponent
  forwardedRef={null}
  is="input"
/>
`;

exports[`<Input /> underline renders correctly 1`] = `
<StyledComponent
  forwardedRef={null}
  is="input"
  underline={true}
/>
`;
